src/front/styles/signup.css
/* 
    General Styles
*/
h1,
h2,
p,
h3,
a {
  margin: 0;
  padding: 0;
  font-family: "Lato";
}

h1 {
  font-size: 2.8em;
  padding: 10px 0;
  font-weight: 800;
}

p {
  font-size: 1.1em;
  font-weight: 100;
  letter-spacing: 5px;
}

.header {
  width: 100%;
  padding: 60px 0;
  text-align: center;
  background: white;
  color: #b3541e;
}

.btn-bgstroke {
  font-size: 20px;
  display: inline-block;
  border: 1px solid white;
  padding: 10px 20px;
  border-radius: 10px;
  cursor: pointer;
  font-weight: 300;
  margin-top: 30px;
}

.btn-bgstroke:hover {
  background-color: white;
  color: #f7f5f2;
}

#header {
  width: auto;
  height: 200px;
}
#hand {
  width: auto;
  padding: 0%;
}
#register {
  background-color: #f7f5f2;
  margin-left: 0.9%;
  height: 750px;
}

#pg {
  padding-top: 25px;
  text-align: center;
  font-family: "Libre Baskerville", serif;
  letter-spacing: normal;
  font-size: medium;
  align-self: center;
  margin-left: 30%;
  margin-bottom: 20px;
  width: 200px;
}
#box {
  margin-left: 5%;
  width: 50%;
}

#bb {
  background-color: #b3541e;
  border-color: white;
  color: white;
  border-radius: 5px;
  margin-left: 65%;
  margin-top: 15px;
  font-family: "IBM Plex Sans", sans-serif;
}
form {
  width: 300px;
  font-family: "IBM Plex Sans", sans-serif;
}

#input1 {
  margin-left: 45%;
  width: fit-content;
  font-family: "IBM Plex Sans", sans-serif;
  margin-bottom: 15px;
  font-size: medium;
}

#input2 {
  margin-left: 45%;
  width: fit-content;
  font-family: "IBM Plex Sans", sans-serif;
  margin-bottom: 15px;
  font-size: medium;
}

#input3 {
  margin-left: 45%;
  width: fit-content;
  font-family: "IBM Plex Sans", sans-serif;
  margin-bottom: 15px;
  font-size: medium;
}

#input4 {
  margin-left: 45%;
  width: fit-content;
  font-family: "IBM Plex Sans", sans-serif;
  margin-bottom: 15px;
  font-size: medium;
}

